fix input date on ios

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,3 +46,11 @@ a {
 * {
   box-sizing: border-box;
 }
+
+input[type="date"] {
+  display: block;
+  --webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+  min-height: 1.2em;
+}
